--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Your Website Title</title>
+    <script
+      async
+      src="https://sreenington-nextjs-test.loca.lt/api/widget?projectId=4b379758-408d-44ff-afee-3221348fbf01"
+    ></script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- Your website content goes here -->
+
+    <!-- FeedbackThing Widget -->
+    <feedback-thing
+      project-id="4b379758-408d-44ff-afee-3221348fbf01"
+    ></feedback-thing>
   </body>
 </html>
